# arrow-rs

./: Cargo.toml  README.md  help.html  index.html  settings.html
arrow/: all.html  constant.ARROW_VERSION.html  index.html  macro.downcast_dictionary_array.html  macro.downcast_primitive_array.html
arrow-ord/: Cargo.toml
arrow_arith/: all.html  index.html
arrow_array/: all.html  index.html  macro.create_array.html  macro.downcast_dictionary_array.html  macro.downcast_integer.html  macro.downcast_integer_array.html  macro.downcast_primitive.html  macro.downcast_primitive_array.html  macro.downcast_run_array.html  macro.downcast_run_end_index.html  macro.downcast_temporal.html  macro.downcast_temporal_array.html  macro.record_batch.html  macro.ree_map.html  struct.RecordBatch.html  struct.RecordBatchIterator.html  struct.RecordBatchOptions.html  struct.Scalar.html  trait.ArrowNativeTypeOp.html  trait.ArrowNumericType.html  trait.Datum.html  trait.RecordBatchReader.html  trait.RecordBatchWriter.html
arrow_avro/: all.html  index.html  trait.AvroFieldExt.html
arrow_buffer/: all.html  index.html  struct.IntervalDayTime.html  struct.IntervalMonthDayNano.html  struct.TrackingMemoryPool.html  struct.i256.html  trait.ArrowNativeType.html  trait.MemoryPool.html  trait.MemoryReservation.html  trait.ToByteSlice.html
arrow_cast/: all.html  index.html
arrow_csv/: all.html  enum.QuoteStyle.html  fn.map_csv_error.html  index.html
arrow_data/: all.html  constant.MAX_INLINE_VIEW_LEN.html  (+10 more)
parquet-variant-shredding/: Cargo.toml
parquet-variant-shredding/src/: lib.rs
(+8262 files in other folders)
