[package]
name = "parquet-variant-shredding"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
include.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
parquet-variant = { path = "../parquet-variant" }
arrow-schema = { workspace = true }
